# RADS

./: .ghost-ntfs-3g-00000000000000000005  .gitignore  0.0.6_RELEASE_NOTES.md  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENT_STATUS.md  EXAMPLES.html  FINAL_REGISTRY_SUMMARY.md  IGUANA_RELEASE.md  LANGUAGE_SPEC.md  LICENSE  Makefile  README.md  REGISTRY_COMPLETION_REPORT.md  REGISTRY_DEPLOYMENT_GUIDE.md  RELEASE_v0.0.4.md  REPL_FEATURES.md  REPL_GUIDE.md  REPL_IMPROVEMENTS_SUMMARY.md  REQUIREMENTS_VERIFICATION.md  SESSION_SUMMARY.md  V0.0.1_COMPLETE.md  V0.0.3_BUTTERFLY_RELEASE.md  V0.0.4_STATUS.md  V0.0.5_CHAMELEON_SUMMARY.md  V0.0.5_COMPLETE.md  V0.0.5_PLAN.md  V0.0.6_FIGHTER_JET_PLAN.md  V0.0.6_FIGHTER_JET_SUMMARY.md  V0.0.6_QUICK_REFERENCE.md  V0.0.7_DARK_MOON_PLAN.md  V0.0.7_GITHUB_RELEASE_NOTES.md  V0.0.8_SUPERNOVA_PLAN.md  V0.0.9_NEBULA_PLAN.md  WEBENGINE_SUMMARY.md  WEB_ENGINE_COMPLETE.md  advanced_net_output.txt  build_and_test.sh  build_error.txt  (+38 more)
.local/: CLEANUP_GUIDE.md  ENVIRONMENT_CLEANUP.md  GITHUB_RELEASE_WORKFLOW.md  README.md  RELEASE_AUTOMATION_COMPLETE.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  VERSION_PLACEMENTS.md  VERSION_TRACKING.md  WEBSITE_UPDATE_GUIDE.md  WEBSITE_VERSION_UPDATE.md
apps/: README.md
constellation/: PHASE2_STATUS.md  PHASE9_IGUANA.md  SESSION_2026_01_12.md
docs/: CHROMA_EFFECTS.md  EXAMPLES.html  MIGRATION_GUIDE.md  PACKAGE_MANAGER.md  PRODUCTION_GUIDE.md  RADStar.md  README.md  REPL_DEMO.md  guide.html  (+25 more)
tools/rads-lsp/: Cargo.toml  README.md
tools/rads-lsp/src/: code_actions.rs  diagnostics.rs  main.rs  refactor.rs
(+412 files in other folders)
